# q_pay

./: .eslintrc.js  .gitignore  docker-compose.yaml  package-lock.json  package.json  requirements.txt  tsconfig.json  webpack.config.ts
backend/: .gitignore  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
backend/api/: authentication.py  tasks.py
backend/apps/api/: authentication.py  services.py  tasks.py  views.py
backend/apps/balance/: models.py  service.py  tasks.py  test_broadcast.py  test_create.py  test_sign.py  utils.py
backend/apps/balance/migrations/: 0001_initial.py  0002_lastfetchedtrontransaction_fetched_at_and_more.py  0003_alter_lastfetchedtrontransaction_note.py  0004_alter_lastfetchedtrontransaction_value.py  0005_alter_lastfetchedtrontransaction_options.py  (+2 more)
backend/apps/main/: apps.py  consumers.py  middlewares.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py  ws_urls.py
backend/apps/tron/: models.py  service.py
backend/apps/user_auth/: authentication.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/config/: asgi.py  celery.py  redis_client.py  routing.py  settings.py  urls.py  wsgi.py
backend/config/settings/: django.py  env.py
backend/db_dumps/: main_bank.csv  main_bankdetails.csv  main_transaction.csv  main_user.csv
backend/main/: middlewares.py  serializers.py  services.py  signals.py
backend/main/migrations/: 0011_balancehistory_delete_servicebalance_and_more.py  0013_alter_transaction_client_id_and_more.py
backend/q_pay/: asgi.py  celery.py  settings.py
(+669 files in other folders)
